--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,7 @@
         "php": "^8.2",
         "laravel/framework": "^11.31",
         "laravel/tinker": "^2.9",
+        "midtrans/midtrans-php": "^2.6",
         "munafio/chatify": "^1.6"
     },
     "require-dev": {
