--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
         "vite": "^6.2.1"
     },
     "dependencies": {
-        "@tailwindcss/vite": "^4.0.9"
+        "@tailwindcss/vite": "^4.0.9",
+        "laravel-echo": "^2.1.3",
+        "pusher-js": "^8.4.0"
     }
 }
